fix turn order clipping

--- a/css/main.less
+++ b/css/main.less
@@ -71,7 +71,9 @@ body {
 .ability-tooltip
 {
   position: absolute;
-  display: block;
+  display: flex;
+  flex: none;
+  flex-flow: column;
   height: 62px;
   border: 1px solid black;
   background-color: #DDD;
